Created main number pad html and css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,42 @@
 </head>
 
 <body>
+    <main>
+        <section class="screen">
+        </section>
+        <section class="special-buttons">
+            <button class="special-buttons special-buttons--button-menu" type="button"></button>
+            <button class="special-buttons special-buttons--button-pi" type="button"></button>
+            <button class="special-buttons special-buttons--button-topower" type="button"></button>
+            <button class="special-buttons special-buttons--button-root" type="button"></button>
+        </section>
 
+        <section class="numpad-grid numpad">
+            <button class="button-animation-1 numpad__button numpad__button--clear" type="button">C</button>
+            <div class="numpad__button-brackets">
+                <button class="button-animation-1 numpad__button-brackets numpad__button-brackets--ob" type="button">(</button>
+                <button class="button-animation-1 numpad__button-brackets numpad__button-brackets--cb" type="button">)</button>
+            </div>
+            <button class="button-animation-1 numpad__button numpad__button--percent" type="button">%</button>
+            <button class="button-animation-1 numpad__button numpad__button--divide" type="button">/</button>
+            <button class="button-animation-1 numpad__button numpad__button--7" type="button">7</button>
+            <button class="button-animation-1 numpad__button numpad__button--8" type="button">8</button>
+            <button class="button-animation-1 numpad__button numpad__button--9" type="button">9</button>
+            <button class="button-animation-1 numpad__button numpad__button--times" type="button">X</button>
+            <button class="button-animation-1 numpad__button numpad__button--4" type="button">4</button>
+            <button class="button-animation-1 numpad__button numpad__button--5" type="button">5</button>
+            <button class="button-animation-1 numpad__button numpad__button--6" type="button">6</button>
+            <button class="button-animation-1 numpad__button numpad__button--minus" type="button">-</button>
+            <button class="button-animation-1 numpad__button numpad__button--1" type="button">1</button>
+            <button class="button-animation-1 numpad__button numpad__button--2" type="button">2</button>
+            <button class="button-animation-1 numpad__button numpad__button--3" type="button">3</button>
+            <button class="button-animation-1 numpad__button numpad__button--add" type="button">+</button>
+            <button class="button-animation-1 numpad__button numpad__button--0" type="button">0</button>
+            <button class="button-animation-1 numpad__button numpad__button--dot" type="button">.</button>
+            <button class="button-animation-1 numpad__button numpad__button--del" type="button">del</button>
+            <button class="button-animation-1 numpad__button numpad__button--equals" type="button">=</button>
+        </section>
+    </main>
 </body>
 
 </html>
