Completed keypad UI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="calculator-body-grid">
         <section class="screen">
         </section>
         <section class="special-buttons">
