Added a second screen and some basic js

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
     <main class="calculator-body-grid">
-        <section>
-            <input class="screen" type="text">
+        <section class="screen-display screen">
+            <input id="output-screen" class="screen screen--output" type="text" readonly value="">
+            <input id="input-screen" class="screen screen--input" type="text" readonly value="">
         </section>
         <section class="special-buttons-grid special-buttons">
             <button id="b-menu" class="special-buttons special-buttons--menu" type="button"></button>
