Phased out brackets

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 
         <section class="numpad-grid numpad">
             <button id="b-clear" class="numpad__button numpad__button--clear" type="button">C</button>
+            <button id="b-negative" class="numpad__button numpad__button--negative" type="button">-/+</button>
+            <!-- #Phased out implementation of brackets
             <div class="numpad__button-brackets">
                 <button id="b-ob" class="numpad__button-brackets numpad__button-brackets--ob" type="button">(</button>
                 <button id="b-cb" class="numpad__button-brackets numpad__button-brackets--cb" type="button">)</button>
             </div>
+            -->
             <button id="b-percent" class="numpad__button numpad__button--percent" type="button">%</button>
             <button id="b-divide" class="numpad__op numpad__button numpad__button--divide" type="button">/</button>
             <button id="b-7" class="numpad__num numpad__button numpad__button--7" type="button">7</button>
@@ -48,7 +51,7 @@
             <button id="b-equals" class="numpad__button numpad__button--equals" type="button">=</button>
         </section>
     </main>
-    <script src="./script.js"></script>
+    <script src="./script.js?v=0.0.1"></script>
 </body>
 
 </html>
