Phased out special buttons and added basic functionality

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <input id="output-screen" class="screen screen--output" type="text" readonly value="">
             <input id="input-screen" class="screen screen--input" type="text" readonly value="">
         </section>
+        <!-- Phased out special buttons for now
         <section class="special-buttons-grid special-buttons">
             <button id="b-menu" class="special-buttons special-buttons--menu" type="button"></button>
             <button id="b-pi" class="special-buttons special-buttons--pi" type="button">π</button>
             <button id="b-root" class="special-buttons special-buttons--root" type="button">√</button>
             <button id="b-topower" class="special-buttons special-buttons--topower" type="button">^</button>
         </section>
+    -->
 
         <section class="numpad-grid numpad">
             <button id="b-clear" class="numpad__button numpad__button--clear" type="button">C</button>
