Changed css sizing

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js?v=0.0.1" async defer></script>
 </head>
 
 <body>
-    <main class="calculator-body-grid">
+    <main class="calculator-body">
         <section class="screen-display screen">
             <input id="output-screen" class="screen screen--output" type="text" readonly value="">
             <input id="input-screen" class="screen screen--input" type="text" readonly value="">
@@ -53,7 +54,6 @@
             <button id="b-equals" class="numpad__button numpad__button--equals" type="button">=</button>
         </section>
     </main>
-    <script src="./script.js?v=0.0.1"></script>
 </body>
 
 </html>
