--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             -->
             <button id="b-percent" class="numpad__button numpad__button--percent" type="button">%</button>
-            <button id="b-divide" class="numpad__op numpad__button numpad__button--divide" type="button">/</button>
+            <button id="b-divide" class="numpad__op numpad__button numpad__button--divide" type="button">➗</button>
             <button id="b-7" class="numpad__num numpad__button numpad__button--7" type="button">7</button>
             <button id="b-8" class="numpad__num numpad__button numpad__button--8" type="button">8</button>
             <button id="b-9" class="numpad__num numpad__button numpad__button--9" type="button">9</button>
